--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 </head>
 <body>
   <div id="album" style="display: none; z-index: 2; position: relative;">
-    <h1 style="color: #ff4d88; font-family: 'Pacifico', cursive; margin-bottom: 1rem;">ALBUMS</h1>
+    <h1 style="color: #ff4d88; font-family: 'Pacifico', cursive; margin-bottom: 1rem;">MY LOVE</h1>
     <div class="album-grid">
       <div class="album-item" onclick="showImageViewer('https://raw.githubusercontent.com/Yudzxml/UploaderV2/main/tmp/c88cf715.jpg')">
         <img src="https://raw.githubusercontent.com/Yudzxml/UploaderV2/main/tmp/c88cf715.jpg" />
